Изменения верстки + CSS после ревью 2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2> <!-- убрал микс-->
-        <h3 class="section-subtitle">Про учёбу и мозг</h3> <!-- убрал микс-->
+        <p class="section-subtitle">Про учёбу и мозг</p> <!-- убрал микс-->
 <!-- переверска таблицы - таблица = список - ячейка=строка; заголовки = <h3>, текст = <p>   -->
         <ul class="table">
           <li class="table__cell">
@@ -77,7 +77,7 @@
       </section>
 
       <section class="feinman">
-        <h1 class="feinman__title">Метод Фейнмана</h1>
+        <h2 class="feinman__title">Метод Фейнмана</h2> <!--Комментарий принял, но, тем не менее, не соглашусь с необходимостью только одного заголовка h1 на странице.  h1 -  смысловой титл обозначающий главную тему страницы, либо блока (в случае если их несколько). Не все блоки нашего лендинга связаны между собой единой мыслью, поэтому h1 - заголовок блока. h2 - подзаголовок титла (ок или <p> без разницы - они одинаково индексируются поисковиком. h3- заголовок блока параграфов, либо списка, если он осмысленно необходим. Например на сайте с рецептами, где <h1>Блюда из риса <h2> Плов <h3>  Плов ферганский)-->
         <p class="feinman__subtitle">Выучить и не забыть.</p> <!-- h3==p: подзаголовки != h1+n -->
         <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" title="Прочитать подробности" class="feinman__link">Подробнее&rarr;</a>
         <img src="images/feinman.png" class="feinman__image" alt="фото Ричарда Фейнмана">
@@ -102,7 +102,7 @@
            </li>
            <li class="table__cell table__cell_theme_dark">
              <h3 class="table__heading table__heading_theme_dark">4</h3>
-             <lp class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
              <h3 class="table__heading table__heading_theme_dark">5</h3>
@@ -147,7 +147,7 @@
           </ul>
         </nav>
         <div class="footer__column footer__column_content_social">
-          <h2 class="footer__column-heading">Соцсети</h2>
+          <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="images/facebook_white.svg" alt="" title="Мы в Facebook" class="footer__social-icon">Facebook</a></li>
             <li><a href="https://vk.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="images/vk_white.svg" alt="" title="Мы в ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
