--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Первая (установочная) работа по Ya.Praktikum">
+    <meta name="description" content="Вторая работа по Ya.Praktikum">
     <meta name="keywords" content="задания, Яндекс.Практикум">
     <meta name="author" content="Алексей Белов">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <a href="https://praktukum.yandex.ru" target="_blank" title="Перейти на Яндекс.Практикум" class="logo logo_place_header"></a> <!--убрал обёртку div-->
+      <a class="logo logo_place_header" href="https://praktukum.yandex.ru" target="_blank" title="Перейти на Яндекс.Практикум" ></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#" target="_blank" title="Узнать подробности"> Узнать &rarr;</a></p>
@@ -22,22 +21,79 @@
     </header>
 
     <main class="content">
-       <section class="description">
+      <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3> <!-- исправлено после ревью-->
-            <ul class="two-columns__main-text">
-              <li class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <ul class="two-columns__main-text">
+            <li class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
               но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</li>
-              <li class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</li> <!-- убрал модификатор отступа в псевдокласс -->
-              <li class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</li>
+            <li class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</li>
+            <li class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</li>
+          </ul>
+      </div>
+      </section>
+
+      <section class="technics">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/attention.png" alt="Изображение книги в руках">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/recall.png" alt="Изображение статуи мыслителя">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/interliving.png" alt="Изображение палубы яхты">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/question.png" alt="Изображение человека в пустом зале">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/competence.png" alt="Стопка книг на руке">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+            <ul class="two-columns__main-text">
+              <li class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+              </li>
             </ul>
-          </div>
+        </div>
+      </section>
+
+      <section class="feinman">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть.</p>
+        <a class="feinman__link" href="https://lifehacker.ru/metod-fejnmana/" target="_blank" title="Прочитать подробности" >Подробнее &rarr;</a>
+        <img src="images/feinman.png" class="feinman__image" alt="фото Ричарда Фейнмана">
       </section>
 
       <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2> <!-- убрал микс-->
-        <p class="section-subtitle">Про учёбу и мозг</p> <!-- убрал микс-->
-<!-- переверска таблицы - таблица = список - ячейка=строка; заголовки = <h3>, текст = <p>   -->
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -76,17 +132,25 @@
         </ul>
       </section>
 
-      <section class="feinman">
-        <h2 class="feinman__title">Метод Фейнмана</h2> <!--Комментарий принял, но, тем не менее, не соглашусь с необходимостью только одного заголовка h1 на странице.  h1 -  смысловой титл обозначающий главную тему страницы, либо блока (в случае если их несколько). Не все блоки нашего лендинга связаны между собой единой мыслью, поэтому h1 - заголовок блока. h2 - подзаголовок титла (ок или <p> без разницы - они одинаково индексируются поисковиком. h3- заголовок блока параграфов, либо списка, если он осмысленно необходим. Например на сайте с рецептами, где <h1>Блюда из риса <h2> Плов <h3>  Плов ферганский)-->
-        <p class="feinman__subtitle">Выучить и не забыть.</p> <!-- h3==p: подзаголовки != h1+n -->
-        <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" title="Прочитать подробности" class="feinman__link">Подробнее&rarr;</a>
-        <img src="images/feinman.png" class="feinman__image" alt="фото Ричарда Фейнмана">
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/book.jpg" alt="Обложка книги Салмана Хана: 'Весь мир - школа'">
+            <a class="khan__buy-link" target="_blank" title="Перейти в магазин для покупки" href="#">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
          <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-
          <ul class="table table_theme_dark">
            <li class="table__cell table__cell_theme_dark">
              <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -131,27 +195,57 @@
           </ul>
           <div class="kaufman__triangle"></div>
      </section>
+
+     <section class="resources">
+       <h2 class="section-title">Полезные ресурсы</h2>
+       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+       <ul class="resources__logo-zone">
+          <li class="resources__logo-items">
+            <a class="resources__link" href="https://arzamas.academy/" target="_blank" title="Подробнее о проекте 'Арзамас'">
+              <img class="resources__logo" src="./images/logo/arzamas.svg" alt="Логотип проекта Arzamas">
+            </a>
+          </li>
+
+          <li class="resources__logo-items">
+            <a class="resources__link" href="https://nplus1.ru/" target="_blank" title="Подробнее о проекте 'n+1'">
+             <img class="resources__logo" src="./images/logo/n1.svg" alt="">
+            </a>
+         </li>
+         <li class="resources__logo-items">
+            <a class="resources__link" href="https://strelka.com/" target="_blank" title="Подробнее о проекте 'Strelka'">
+              <img class="resources__logo" src="./images/logo/strelka.svg" alt="Логотип проекта 'Strelka'">
+            </a>
+         </li>
+         <li class="resources__logo-items">
+            <a class="resources__link" href="https://polka.academy/" target="_blank" title="Подробнее о проекте 'Polka'">
+              <img class="resources__logo" src="./images/logo/polka.svg" alt="Логотип проекта 'Polka'">
+             </a>
+          </li>
+       </ul>
+     </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
+          <a class="logo logo_place_footer" href="http://praktikum.yandex.ru" target="_blank" title="Перейти на Яндекс.Практикум"></a>
           <p class="footer__author"> &copy; 2020. Алексей Белов </p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link">Главная</a></li>
-            <li><a href="#" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
+            <li class="footer__column-row"><a href="#" class="footer__column-link">Главная</a></li>
+            <li class="footer__column-row"><a href="#" class="footer__column-link">Концепция</a></li>
+            <li class="footer__column-row"><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="images/facebook_white.svg" alt="" title="Мы в Facebook" class="footer__social-icon">Facebook</a></li>
-            <li><a href="https://vk.com/yandex.praktikum/" class="footer__column-link" target="_blank"><img src="images/vk_white.svg" alt="" title="Мы в ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link" target="_blank"><img src="images/instagram_white.svg" alt="" title="Мы в Instagram" class="footer__social-icon" >Instagram</a></li>
+            <li class="footer__column-row"><a class="footer__column-link" href="https://www.facebook.com/yandex.praktikum/" target="_blank"><img src="images/logo/facebook_white.svg" alt="" title="Мы в Facebook" class="footer__social-icon">Facebook</a></li>
+            <li class="footer__column-row"><a class="footer__column-link" href="https://vk.com/yandex.praktikum/" target="_blank"><img src="images/logo/vk_white.svg" alt="" title="Мы в ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li class="footer__column-row"><a class="footer__column-link" href="https://www.instagram.com/yndx.praktikum/" target="_blank"><img src="images/logo/instagram_white.svg" alt="" title="Мы в Instagram" class="footer__social-icon" >Instagram</a></li>
           </ul>
         </div>
       </div>
