--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#" target="_blank" title="Узнать подробности"> Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/two_again.png" alt="Иллюстрация картины Фёдора Решетникова - 'Опять двойка'">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -58,7 +58,7 @@
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/competence.png" alt="Стопка книг на руке">
+            <img class="cards__image" src="./images/competence.png" alt="Изображение стопки книг на руке">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -136,9 +136,9 @@
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
-            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -193,7 +193,7 @@
              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
            </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
      </section>
 
      <section class="resources">
